# firm-foundations

./: README.md  pyproject.toml  the_pile_val.py
scripts/: create_pile_hf_data.py  mia_baselines.sh
src/firm_foundations/: __init__.py
src/firm_foundations/data/: Dolma.py  OLMo-7B-local.yaml  create_olmo_data.py
src/firm_foundations/routines/: membership_inference.py
